<resources>
    <string name="app_name">SRS</string>
    <string name="action_settings">Settings</string>
    <string name="register_name">Name</string>
    <string name="register_username">Username</string>
    <string name="register_age">Age</string>
    <string name="register_gender">Gender</string>
    <string name="register_password">Password</string>
    <string name="register_confirm_password">Confirm Password</string>
    <string name="register_button">Register</string>
    <string name="register_secur_question">Security Question</string>
    <string name="register_answer">Answer</string>
    <string name="register_phone_num">Phone Number</string>
    <string name="home_page_view">Enter here</string>
    <string name="insertData">insert into user (username,password,name,gender,age,phone_number,question_id,answer) values (?,?,?,?,?,?,?,?)</string>
</resources>
